--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  padding: 0;
+}
+
+.create-list {
+  background: #eee;
+  padding: 25px;
+  height: 100vh;
+}
+.create-list h4 {
+  border-bottom: 1px solid #000;
+  padding-bottom: 10px;
+}
+.create-list ul {
+  list-style: none;
+}
+
+.button-sec {
+  padding: 15px;
+  background: #d2d6d2;
+}
+
+.line-through {
+  text-decoration: line-through;
+}
