--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
-ul {
+@import 'https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css';
+
+ul.todo-list {
   margin: 0;
   padding: 0;
 }
 
 /* Style the list items */
-ul li {
+ul.todo-list li {
   cursor: pointer;
   position: relative;
   padding: 12px 8px 12px 40px;
@@ -21,24 +23,24 @@ ul li {
 }
 
 /* Set all odd list items to a different color (zebra-stripes) */
-ul li:nth-child(odd) {
+ul.todo-list li:nth-child(odd) {
   background: #f9f9f9;
 }
 
 /* Darker background-color on hover */
-ul li:hover {
+ul.todo-list li:hover {
   background: #ddd;
 }
 
 /* When clicked on, add a background color and strike out text */
-ul li.checked {
+ul.todo-list li.checked {
   background: #888;
   color: #fff;
   text-decoration: line-through;
 }
 
 /* Add a "checked" mark when clicked on */
-ul li.checked::before {
+ul.todo-list li.checked::before {
   content: '';
   position: absolute;
   border-color: #fff;
@@ -67,4 +69,18 @@ button {
 }
 button[disabled] {
   background-color: rgb(204, 204, 204);
+}
+hr {
+  border-color: rgb(0, 162, 255);
+}
+.product-card-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.product-card {
+  flex: 45%;
+  margin: 15px 0;
+}
+.product-card:nth-child(even) {
+  margin-left: 30px;
 }
