--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,8 @@ code {
 
 .create-list {
   background: #eee;
-  padding: 25px;
-  height: 100vh;
+  /* padding: 25px;
+  height: 100vh; */
 }
 .create-list h4 {
   border-bottom: 1px solid #000;
@@ -36,4 +36,61 @@ code {
 
 .line-through {
   text-decoration: line-through;
+}
+
+table {
+  width: 100%;
+}
+table th,
+table td {
+  padding: 10px;
+}
+
+/* table th:nth-child(even),
+table td:nth-child(even) {
+  background-color: #f3f3f3;
+} */
+
+table th {
+  background-color: #00a2ff;
+  color: #fff;
+}
+
+table tr:nth-child(even) {
+  background-color: #f3f3f3;
+}
+
+table th:last-child,
+table td:last-child {
+  border-right: 1px solid transparent;
+}
+
+@media screen and (max-width: 768px) {
+  table thead {
+    display: none;
+  }
+  table, table tbody, table tbody tr, table tbody tr td {
+    display: block;
+    width: 100%;
+    text-align: right;
+  }
+  table tbody tr {
+    border: 1px solid #f3f3f3; 
+    margin-bottom: 25px;
+  }
+  table tbody tr td {
+    border-bottom: 1px solid #f3f3f3; 
+    position: relative;
+  }
+  table tbody tr td:before {
+    content: attr(data-type);
+    text-align: left;
+    position: absolute;
+    left: 0;
+    background: #00a2ff;
+    width: 100px;
+    color: #fff;
+    padding: 10px;
+    top: 0;
+  }
 }
