--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import 'https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css';
+@import 'https://use.fontawesome.com/releases/v5.7.0/css/all.css';
 
 ul.todo-list {
   margin: 0;
@@ -81,6 +82,6 @@ hr {
   flex: 45%;
   margin: 15px 0;
 }
-.product-card:nth-child(even) {
+/* .product-card:nth-child(even) {
   margin-left: 30px;
-}
+} */
